[package]
name = "valnk"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/py0x/valnk"
homepage = "https://github.com/py0x/valnk"
description = """
A forum for collecting and discussing valuable links, inspired by Hacker News.
"""
keywords = ["valnk", "forum", "links", "hacker-news"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-sqs = "0.19.0"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
figment = "0.10.8"
aws-sdk-dynamodb = "0.21.0"
serde = { version = "1.0", features = ["derive"]}
serde_dynamo = "4.0.9"
uuid = {version = "1.2.1", features=["v4",  "fast-rng", "macro-diagnostics"]}
chrono = {version="0.4",features = ["serde"]}
thiserror = "1.0.37"
anyhow = "1.0.66"